--- a/webroot/article.html
+++ b/webroot/article.html
@@ -72,47 +72,38 @@
 						</div>
 					</nav>
 				</header>
-				<section class="blog">
+				<article class="blog">
 					<header>
-						<img id="carousel" src="assets/blog_header.jpg" alt="carousel" width="974" height="546">
+						<img id="carousel" src="assets/post_header.jpg" alt="carousel" width="974" height="546">
 					</header>
-					<ul class="container">
-						<li><a href="article.html">
-							<img src="assets/post-1.jpg" width="318" height="178" alt="">
-							<article>
-								<h1>Article title 1</h1>
-								<date>June 5, 2013</date>
-								<div class="excerpt">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel ligula ullamcorper lectus ornare consectetur a ullamcorper quam. Morbi tortor nisl, interdum eget elementum ac, aliquet eget magna. Morbi lacinia mauris ac pretium cursus. Donec sit amet congue turpis, in euismod est.
-									<span class="more">Read more</span>
-								</div>
-							</article>
-						</a></li><li><a href="article.html" class="current">
-							<img src="assets/post-2.jpg" width="318" height="178" alt="">
-							<article>
-								<h1>Article title 1</h1>
-								<date>June 5, 2013</date>
-								<div class="excerpt">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel ligula ullamcorper lectus ornare consectetur a ullamcorper quam. Morbi tortor nisl, interdum eget elementum ac, aliquet eget magna. Morbi lacinia mauris ac pretium cursus. Donec sit amet congue turpis, in euismod est.
-									<span class="more">Read more</span>
-								</div>
-							</article>
-						</a></li><li><a href="article.html">
-							<img src="assets/post-3.jpg" width="318" height="178" alt="">
-							<article>
-								<h1>Article title 1</h1>
-								<date>June 5, 2013</date>
-								<div class="excerpt">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel ligula ullamcorper lectus ornare consectetur a ullamcorper quam. Morbi tortor nisl, interdum eget elementum ac, aliquet eget magna. Morbi lacinia mauris ac pretium cursus. Donec sit amet congue turpis, in euismod est.
-									<span class="more">Read more</span>
-								</div>
-							</article>
-						</a></li>
-					</ul>
+					<div class="container">
+						<h1>Article title 2</h1>
+						<date>June 5, 2013</date>
+						<div class="content">
+							<p><img src="http://cdn.shopify.com/s/files/1/0194/9576/files/hand_watch.jpg?666" alt="" style="float: left; margin-right: 15px; margin-bottom: 15px;"></p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non diam dolor. Ut quis tempor nisi. Vestibulum pulvinar arcu eu tempus facilisis. Curabitur malesuada imperdiet erat eu luctus. Praesent cursus pharetra varius. Proin gravida, quam non dictum sagittis, dui odio malesuada nulla, ut congue lectus neque a nisi. Cras volutpat justo eleifend, tincidunt urna id, bibendum risus. Pellentesque imperdiet magna turpis, at cursus urna congue at. Morbi fringilla, lorem quis venenatis dictum, diam tellus consequat lorem, non viverra lacus dolor sed urna. Nulla id nisi et nibh tincidunt tempus. Donec sodales leo sed tristique pharetra. Quisque eget iaculis sapien. Phasellus auctor massa eros, vitae tempor risus mollis vel. Donec consectetur, felis sit amet lobortis imperdiet, sapien mauris facilisis sem, non eleifend felis nulla in ipsum. Proin magna risus, elementum vel sollicitudin quis, pharetra non orci. Aenean tristique placerat augue id tempus.</p>
+							<p>Etiam dictum, leo eu hendrerit laoreet, massa augue venenatis erat, ac luctus ante mi ut magna. Curabitur eu mattis velit, eu mollis nulla. Curabitur rhoncus lacinia lorem, non semper nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque accumsan facilisis elit in facilisis. Morbi tempus dapibus lacus quis suscipit. Nunc in est varius turpis condimentum iaculis. Curabitur egestas, odio id convallis semper, augue enim scelerisque lorem, eget vehicula ante sapien sit amet erat. Phasellus at vestibulum turpis. Nam egestas consectetur purus, ac dignissim augue posuere in. Integer sollicitudin rhoncus magna sollicitudin ullamcorper. Maecenas sagittis porttitor mattis. Proin euismod consequat fringilla. Duis blandit quam at libero tincidunt consequat. Quisque sollicitudin lorem vitae vehicula placerat.</p>
+							<p>Morbi vitae imperdiet dui, vel lacinia sapien. Vestibulum aliquam congue molestie. Nulla semper purus nulla, ut elementum orci imperdiet non. Morbi bibendum, lorem at mattis congue, nulla nulla euismod diam, sit amet hendrerit lorem felis aliquet felis. Morbi vitae purus eu sem dignissim rhoncus eleifend aliquet tortor. Pellentesque ullamcorper nulla ut velit euismod sodales. Quisque adipiscing eros tellus, eu elementum nisi pulvinar in. Donec iaculis ante lobortis lectus venenatis elementum. Etiam accumsan, tortor nec euismod ornare, neque justo placerat nisi, ac pellentesque quam elit in dui. Maecenas a condimentum tortor, at aliquet nisl. Praesent et adipiscing tortor. Mauris et commodo orci. Nullam rhoncus purus vitae lectus molestie dapibus.</p>
+						</diV>
+						<p class="credit">Posted by <a href="#" class="author">Natty Adams</a></p>
+					</div>
 					<nav class="container">
-						<a href="#">&laquo; Previous</a>
-						<a href="#">1</a>
-						<a href="#">Next &raquo;</a>
+						<a href="article.html">
+							<figure>
+								<img src="assets/post_header.jpg" alt="" width="487" height="273">
+								<figcaption>
+									<h1>&laquo; Article Title 1</h1>
+								</figcaption>
+							</figure>
+						</a>
+						<a href="article.html">
+							<figure>
+								<img src="assets/post_header.jpg" alt="" width="487" height="273">
+								<figcaption>
+									<h1>Article Title 3 &raquo;</h1>
+								</figcaption>
+							</figure>
+						</a>
 					</nav>
 				</section>
 			</div>
