--- a/webroot/article.html
+++ b/webroot/article.html
@@ -76,7 +76,7 @@
 					<header>
 						<img id="carousel" src="assets/post_header.jpg" alt="carousel" width="974" height="546">
 					</header>
-					<div class="container">
+					<div class="container article">
 						<h1>Article title 2</h1>
 						<date>June 5, 2013</date>
 						<div class="content">
